# CCOligoPred

./: LICENSE  README.md  pyproject.toml  test_results.xlsx  test_results16.xlsx  test_results75.xlsx
ccoligopred/: cli.py
ccoligopred/io/: __init__.py
ccoligopred/models/: __init__.py  binary.py  multiclass.py
ccoligopred/rbf/: __init__.py  calculator.py
datasets/: Oligopred_trial_test.xlsx
oligocoil/: cli.py
oligocoil/io/: excel_handler.py
oligocoil/models/: __init__.py  binary.py  multiclass.py
oligocoil/rbf/: __init__.py
oligocoil/weights/: MULTICLASS_ANOVA_Features.json
