[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccoligopred"
version = "1.0.0"
description = "Machine learning framework for predicting coiled-coil oligomeric states using register-specific physicochemical features."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "openpyxl",
    "xgboost",
    "lightgbm",
    "imbalanced-learn",
    "joblib"
]

[project.scripts]
# This will map the 'ccoligopred' terminal command to the cli.py file
ccoligopred = "ccoligopred.cli:main"

[tool.setuptools.packages.find]
include = ["ccoligopred", "ccoligopred.*"]

[tool.setuptools.package-data]
# This ensures your .pkl models and .json ANOVA list will be bundled into the package!
ccoligopred = ["weights/*.pkl", "weights/*.json"]
