[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccoligopred"
version = "1.0.0"
description = "Machine learning framework for predicting coiled-coil oligomeric states using register-specific physicochemical features."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.0",
    "scikit-learn==1.5.2",
    "openpyxl==3.1.5",
    "xgboost==3.0.5",
    "lightgbm==4.5.0",
    "imbalanced-learn==0.12.4",
    "joblib==1.4.2"
]

[project.scripts]
# This will map the 'ccoligopred' terminal command to the cli.py file
ccoligopred = "ccoligopred.cli:main"

[tool.setuptools.packages.find]
include = ["ccoligopred", "ccoligopred.*"]

[tool.setuptools.package-data]
# This ensures your .pkl models and .json ANOVA list will be bundled into the package!
ccoligopred = ["weights/*.pkl", "weights/*.json"]
